feat: deliver Spring Boot REPL 0.20 workbench and MCP tools
Integrate the REPL with existing Spring Boot run configurations and keep
Java sessions, object inspection, source results and workbook state usable
through context changes. Add snapshot versions, capture rules and debugger
snapshot points, rollback modes, reproduction bundles and CASE/JUnit export.

Add recorded-call browsing with source values, filtering, timeline and
comparison, plus the 60-tool MCP catalog and explicit recording permissions.
Include the Hungarian PDF handbook, Claude instructions and regression suite.

Make fresh checkouts buildable with the Gradle 8.10.2 wrapper, binary PDF
attributes, matching bridge version and version-aware CI package checks.
Use a targeted breakpoint in the debugger test to avoid JShell startup
slowdowns caused by method-entry monitoring.